# har-anonymizer

./: README.md  pyproject.toml
har_anonymizer/: __init__.py  anonymizer.py  cli.py
tests/: test_anonymizer.py
