[project]
name = "har-anonymizer"
version = "0.1.0"
description = "Anonymize HAR captures from Chrome/Edge for safe use with AI tools"
authors = [
    {name = "ErikApption"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
har-anonymizer = "har_anonymizer.cli:run"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
